[package]
name = "bookish-journey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
log = "0.4.14"
mini-redis = "0.4.1"
pretty_env_logger = "0.4.0"
tokio = {version="1.17.0", features=["macros", "rt-multi-thread"]}
